kubernetes/cloudscheduler/cloudscheduler-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudscheduler-ingress
  annotations:
spec:
  rules:
  - host: ses.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: cloudscheduler
            port:
              number: 9770
